Add member form

--- a/index.html
+++ b/index.html
@@ -19,12 +19,66 @@
             <h2>Fiche d'inscription - Saison 2013/2014</h2>
         </div>
     </div>
-    <div class="form">
+    <form>
         <div class="formIdentity">
             <div class="formIdentity__member">
+                <div class="formGroup">
+                    <h3>L'adhérent</h3>
+                    <div class="formLine">
+                        <div class="formItem">
+                            <label>Prénom</label>
+                            <input type="text" />
+                        </div>
+                        <div class="formItem">
+                            <label>Nom</label>
+                            <input type="text" />
+                        </div>
+                    </div>
+                    <div class="formLine">
+                        <div class="formItem">
+                            <label>Date de naissance</label>
+                            <input type="text" class="day" />
+                                <span class="interInput">/</span>
+                            <input type="text" class="month" />
+                                <span class="interInput">/</span>
+                            <input type="text" class="year" />
+                        </div>
+                        <div class="formItem">
+                            <label>Age dans l'année</label>
+                            <input type="text" />
+                        </div>
+                    </div>
+                </div>
 
+                <div class="formGroup">
+                    <h3>Le responsable</h3>
+                    <div class="formLine">
+                        <div class="formItem">
+                            <label>Prénom <i>(si différent de l'adhérent)</i></label>
+                            <input type="text" />
+                        </div>
+                        <div class="formItem">
+                            <label>Nom <i>(si différent de l'adhérent)</i></label>
+                            <input type="text" />
+                        </div>
+                    </div>
+                    <div class="formLine">
+                        <div class="formItem">
+                            <label>Date de naissance</label>
+                            <input type="text" class="day" />
+                            <span class="interInput">/</span>
+                            <input type="text" class="month" />
+                            <span class="interInput">/</span>
+                            <input type="text" class="year" />
+                        </div>
+                        <div class="formItem">
+                            <label>Age dans l'année</label>
+                            <input type="text" />
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
+    </form>
 </body>
 </html>
