Make the form responsive

--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <link href='http://fonts.googleapis.com/css?family=Ruslan+Display' rel='stylesheet' type='text/css'>
 </head>
 <body>
+    <div class="header__photo"></div>
     <div class="header">
-        <div class="header__photo"></div>
-        <div class="header__contact">
-            http://nokachi-lyon.fr<br>
-            contact@nokachi-lyon.fr
-        </div>
         <div class="header__title">
             <h1>No Kachi Lyon</h1>
-            <h2>Fiche d'inscription - Saison 2013/2014</h2>
+            <h2>Fiche&nbsp;d'inscription</h2>
+            <h2>Saison&nbsp;2013/2014</h2>
+        </div>
+        <div class="header__contact">
+            <div>http://nokachi-lyon.fr</div>
+            <div>contact@nokachi-lyon.fr</div>
         </div>
     </div>
     <form>
