Complete the identity side of the form

--- a/index.html
+++ b/index.html
@@ -22,62 +22,88 @@
     </div>
     <form>
         <div class="formIdentity">
-            <div class="formIdentity__member">
-                <div class="formGroup">
-                    <h3>L'adhérent</h3>
-                    <div class="formLine">
-                        <div class="formItem">
-                            <label>Prénom</label>
-                            <input type="text" />
-                        </div>
-                        <div class="formItem">
-                            <label>Nom</label>
-                            <input type="text" />
-                        </div>
+            <div class="formGroup">
+                <h3>L'adhérent</h3>
+                <div class="formLine">
+                    <div class="formItem">
+                        <label>Prénom</label>
+                        <input type="text" />
                     </div>
-                    <div class="formLine">
-                        <div class="formItem">
-                            <label>Date de naissance</label>
-                            <input type="text" class="day" />
-                                <span class="interInput">/</span>
-                            <input type="text" class="month" />
-                                <span class="interInput">/</span>
-                            <input type="text" class="year" />
-                        </div>
-                        <div class="formItem">
-                            <label>Age dans l'année</label>
-                            <input type="text" />
-                        </div>
+                    <div class="formItem">
+                        <label>Nom</label>
+                        <input type="text" />
                     </div>
                 </div>
+                <div class="formLine">
+                    <div class="formItem">
+                        <label>Date de naissance</label>
+                        <input type="text" class="day" />
+                            <span class="interInput">/</span>
+                        <input type="text" class="month" />
+                            <span class="interInput">/</span>
+                        <input type="text" class="year" />
+                    </div>
+                    <div class="formItem">
+                        <label>Age dans l'année</label>
+                        <input type="text" />
+                    </div>
+                </div>
+            </div>
 
-                <div class="formGroup">
-                    <h3>Le responsable</h3>
-                    <div class="formLine">
-                        <div class="formItem">
-                            <label>Prénom <i>(si différent de l'adhérent)</i></label>
-                            <input type="text" />
-                        </div>
-                        <div class="formItem">
-                            <label>Nom <i>(si différent de l'adhérent)</i></label>
-                            <input type="text" />
-                        </div>
+            <div class="formGroup">
+                <h3>Le responsable</h3>
+                <div class="formLine">
+                    <div class="formItem">
+                        <label>Prénom <i>(si différent de l'adhérent)</i></label>
+                        <input type="text" />
                     </div>
-                    <div class="formLine">
-                        <div class="formItem">
-                            <label>Date de naissance</label>
-                            <input type="text" class="day" />
-                            <span class="interInput">/</span>
-                            <input type="text" class="month" />
-                            <span class="interInput">/</span>
-                            <input type="text" class="year" />
-                        </div>
-                        <div class="formItem">
-                            <label>Age dans l'année</label>
-                            <input type="text" />
-                        </div>
+                    <div class="formItem">
+                        <label>Nom <i>(si différent de l'adhérent)</i></label>
+                        <input type="text" />
                     </div>
                 </div>
+                <div class="formLine">
+                    <div class="formItem formItem--double">
+                        <label>Adresse</label>
+                        <input type="text" />
+                    </div>
+                </div>
+                <div class="formLine">
+                    <div class="formItem">
+                        <label>Ville</label>
+                        <input type="text" />
+                    </div>
+                    <div class="formItem">
+                        <label>Code postal</label>
+                        <input type="text" />
+                    </div>
+                </div>
+                <div class="formLine">
+                    <div class="formItem">
+                        <label>Téléphone</label>
+                        <input type="text" />
+                    </div>
+                    <div class="formItem">
+                        <label>Adresse email</label>
+                        <input type="text" />
+                    </div>
+                </div>
+            </div>
+
+            <div class="formGroup">
+                <h3>Autorisation parentale</h3>
+                <p>
+                    Je sousigné <input type="text" class="inText" />, père, mère ou tuteur de <input type="text" class="inText" />,
+                    l'autorise à pratiquer le karaté au sein du No Kachi Lyon,
+                    ainsi qu'à participer aux différentes rencontres sportives ou compétitions de karaté pour la saison 2013/2014.
+                </p>
+                <p>
+                    J'autorise le responsable à prendre, le cas échéant, toutes mesures
+                    (traitement médicaux, hospitalisations, interventions chirurgicales) rendues nécessaires par l'état de l'enfant.
+                </p>
+                <p>
+                    Je dégage le No Kachi Lyon de toute responsabilité en cas d'accident qui surviendrait à mon enfant hors du cadre des cours.
+                </p>
             </div>
         </div>
     </form>
