Complete activity price table

--- a/index.html
+++ b/index.html
@@ -106,6 +106,53 @@
                 </p>
             </div>
         </div>
+        <div class="formInscription">
+            <div class="formGroup">
+                <h3>L'activité</h3>
+                <div class="formLine">
+                    <div class="formItem formItem--double">
+                        <table class="activity">
+                            <tr>
+                                <td>Cotisation Karaté de 6 à 9ans</td>
+                                <td>132€</td>
+                                <td><input type="checkbox" /></td>
+                                <td class="toComplete"></td>
+                            </tr>
+                            <tr>
+                                <td>Cotisation Karaté de 10 à 14ans</td>
+                                <td>152€</td>
+                                <td><input type="checkbox" /></td>
+                                <td class="toComplete"></td>
+                            </tr>
+                            <tr>
+                                <td>Cotisation Karaté Fitness</td>
+                                <td>182€</td>
+                                <td><input type="checkbox" /></td>
+                                <td class="toComplete"></td>
+                            </tr>
+                            <tr>
+                                <td>Adhésion club obligatoire</td>
+                                <td>34€</td>
+                                <td><input type="checkbox" /></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>Licence fédération obligatoire</td>
+                                <td>34€</td>
+                                <td><input type="checkbox" /></td>
+                                <td></td>
+                            </tr>
+                            <tr class="total">
+                                <td>Total</td>
+                                <td class="toComplete"></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
     </form>
 </body>
 </html>
