--- a/index.html
+++ b/index.html
@@ -24,69 +24,57 @@
         <div class="formIdentity">
             <div class="formGroup">
                 <h3>L'adhérent</h3>
-                <div class="formLine">
-                    <div class="formItem">
-                        <label>Prénom</label>
-                        <input type="text" />
-                    </div>
-                    <div class="formItem">
-                        <label>Nom</label>
-                        <input type="text" />
-                    </div>
+                <div class="formItem">
+                    <label>Prénom</label>
+                    <input type="text" />
                 </div>
-                <div class="formLine">
-                    <div class="formItem">
-                        <label>Date de naissance</label>
-                        <input type="text" class="day" />
-                            <span class="interInput">/</span>
-                        <input type="text" class="month" />
-                            <span class="interInput">/</span>
-                        <input type="text" class="year" />
-                    </div>
-                    <div class="formItem">
-                        <label>Age dans l'année</label>
-                        <input type="text" />
-                    </div>
+                <div class="formItem">
+                    <label>Nom</label>
+                    <input type="text" />
+                </div>
+                <div class="formItem">
+                    <label>Date de naissance</label>
+                    <input type="text" class="day" />
+                        <span class="interInput">/</span>
+                    <input type="text" class="month" />
+                        <span class="interInput">/</span>
+                    <input type="text" class="year" />
+                </div>
+                <div class="formItem">
+                    <label>Age dans l'année</label>
+                    <input type="text" />
                 </div>
             </div>
 
             <div class="formGroup">
                 <h3>Le responsable</h3>
-                <div class="formLine">
-                    <div class="formItem">
-                        <label>Prénom <i>(si différent de l'adhérent)</i></label>
-                        <input type="text" />
-                    </div>
-                    <div class="formItem">
-                        <label>Nom <i>(si différent de l'adhérent)</i></label>
-                        <input type="text" />
-                    </div>
+                <div class="formItem">
+                    <label>Prénom <i>(si différent de l'adhérent)</i></label>
+                    <input type="text" />
                 </div>
-                <div class="formLine">
-                    <div class="formItem formItem--double">
-                        <label>Adresse</label>
-                        <input type="text" />
-                    </div>
+                <div class="formItem">
+                    <label>Nom <i>(si différent de l'adhérent)</i></label>
+                    <input type="text" />
                 </div>
-                <div class="formLine">
-                    <div class="formItem">
-                        <label>Ville</label>
-                        <input type="text" />
-                    </div>
-                    <div class="formItem">
-                        <label>Code postal</label>
-                        <input type="text" />
-                    </div>
+                <div class="formItem formItem--double">
+                    <label>Adresse</label>
+                    <input type="text" />
                 </div>
-                <div class="formLine">
-                    <div class="formItem">
-                        <label>Téléphone</label>
-                        <input type="text" />
-                    </div>
-                    <div class="formItem">
-                        <label>Adresse email</label>
-                        <input type="text" />
-                    </div>
+                <div class="formItem">
+                    <label>Ville</label>
+                    <input type="text" />
+                </div>
+                <div class="formItem">
+                    <label>Code postal</label>
+                    <input type="text" />
+                </div>
+                <div class="formItem">
+                    <label>Téléphone</label>
+                    <input type="text" />
+                </div>
+                <div class="formItem">
+                    <label>Adresse email</label>
+                    <input type="text" />
                 </div>
             </div>
 
@@ -109,48 +97,94 @@
         <div class="formInscription">
             <div class="formGroup">
                 <h3>L'activité</h3>
+                <div class="formItem formItem--double">
+                    <table class="activity">
+                        <tr>
+                            <td>Cotisation Karaté de 6 à 9ans</td>
+                            <td>132€</td>
+                            <td><input type="checkbox" /></td>
+                            <td class="toComplete"></td>
+                        </tr>
+                        <tr>
+                            <td>Cotisation Karaté de 10 à 14ans</td>
+                            <td>152€</td>
+                            <td><input type="checkbox" /></td>
+                            <td class="toComplete"></td>
+                        </tr>
+                        <tr>
+                            <td>Cotisation Karaté Fitness</td>
+                            <td>182€</td>
+                            <td><input type="checkbox" /></td>
+                            <td class="toComplete"></td>
+                        </tr>
+                        <tr>
+                            <td>Adhésion club obligatoire</td>
+                            <td>34€</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>Licence fédération obligatoire</td>
+                            <td>34€</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+
+            <div class="formGroup">
+                <h3>Pièces jointes</h3>
                 <div class="formLine">
                     <div class="formItem formItem--double">
-                        <table class="activity">
+                        <table class="attachment">
                             <tr>
-                                <td>Cotisation Karaté de 6 à 9ans</td>
-                                <td>132€</td>
+                                <td>Certificat médical daté de moins d’un an</td>
+                                <td><input type="checkbox" /></td>
+                            </tr>
+                            <tr>
+                                <td>Photo d'identité</td>
+                                <td><input type="checkbox" /></td>
+                            </tr>
+                            <tr>
+                                <td>Chèques de paiement</td>
+                                <td><input type="checkbox" /></td>
+                            </tr>
+                            <tr>
+                                <td class="toComplete"></td>
                                 <td><input type="checkbox" /></td>
                                 <td class="toComplete"></td>
                             </tr>
                             <tr>
-                                <td>Cotisation Karaté de 10 à 14ans</td>
-                                <td>152€</td>
+                                <td class="toComplete"></td>
                                 <td><input type="checkbox" /></td>
                                 <td class="toComplete"></td>
                             </tr>
                             <tr>
-                                <td>Cotisation Karaté Fitness</td>
-                                <td>182€</td>
+                                <td class="toComplete"></td>
                                 <td><input type="checkbox" /></td>
                                 <td class="toComplete"></td>
                             </tr>
                             <tr>
-                                <td>Adhésion club obligatoire</td>
-                                <td>34€</td>
-                                <td><input type="checkbox" /></td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td>Licence fédération obligatoire</td>
-                                <td>34€</td>
-                                <td><input type="checkbox" /></td>
-                                <td></td>
-                            </tr>
-                            <tr class="total">
-                                <td>Total</td>
                                 <td class="toComplete"></td>
-                                <td></td>
-                                <td></td>
+                                <td><input type="checkbox" /></td>
+                                <td class="toComplete"></td>
                             </tr>
                         </table>
                     </div>
                 </div>
+            </div>
+
+            <div class="formGroup">
+                <h3>Signature</h3>
+                <p>
+                    J'atteste avoir pris connaissance des conditions générales d'inscription.<br>
+                    Mention "Lu et approuvé" <input type="text" class="inText" /><br>
+                </p>
+                <p style="text-align: right">
+                    Date <input type="text" class="inText inText--half" />
+                    Signature <input type="text" class="inText inText--half" />
+                </p>
             </div>
         </div>
     </form>
