--- a/index.html
+++ b/index.html
@@ -102,34 +102,40 @@
                 <div class="tableWrapper">
                     <table class="activity">
                         <tr>
-                            <td>Cotisation Karaté de 6 à 9ans</td>
+                            <th></th>
+                            <th>Activité</th>
+                            <th>Cotisation</th>
+                            <th>Adhésion</th>
+                            <th>Licence</th>
+                            <th>Total</th>
+                            <th></th>
+                        </tr>
+                        <tr>
+                            <td><input type="checkbox" /></td>
+                            <td>Karaté de 6 à 9ans</td>
                             <td>132€</td>
-                            <td><input type="checkbox" /></td>
+                            <td>34€</td>
+                            <td>34€</td>
+                            <td>200€</td>
                             <td class="toComplete"></td>
                         </tr>
                         <tr>
-                            <td>Cotisation Karaté de 10 à 14ans</td>
+                            <td><input type="checkbox" /></td>
+                            <td>Karaté de 10 à 14ans</td>
                             <td>152€</td>
-                            <td><input type="checkbox" /></td>
+                            <td>34€</td>
+                            <td>34€</td>
+                            <td>220€</td>
                             <td class="toComplete"></td>
                         </tr>
                         <tr>
-                            <td>Cotisation Karaté Fitness</td>
+                            <td><input type="checkbox" /></td>
+                            <td>Karaté Fitness</td>
                             <td>182€</td>
-                            <td><input type="checkbox" /></td>
+                            <td>34€</td>
+                            <td>34€</td>
+                            <td>250€</td>
                             <td class="toComplete"></td>
-                        </tr>
-                        <tr>
-                            <td>Adhésion club obligatoire</td>
-                            <td>34€</td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td>Licence fédération obligatoire</td>
-                            <td>34€</td>
-                            <td></td>
-                            <td></td>
                         </tr>
                     </table>
                 </div>
@@ -141,35 +147,30 @@
                     <div class="tableWrapper">
                         <table class="attachment">
                             <tr>
+                                <td><input type="checkbox" /></td>
                                 <td>Certificat médical daté de moins d’un an</td>
-                                <td><input type="checkbox" /></td>
                             </tr>
                             <tr>
+                                <td><input type="checkbox" /></td>
                                 <td>Photo d'identité</td>
-                                <td><input type="checkbox" /></td>
                             </tr>
                             <tr>
-                                <td>Chèques de paiement</td>
                                 <td><input type="checkbox" /></td>
+                                <td>Chèque de paiement</td>
                             </tr>
                             <tr>
+                                <td></td>
                                 <td class="toComplete"></td>
-                                <td><input type="checkbox" /></td>
-                                <td class="toComplete"></td>
-                            </tr>
-                            <tr>
-                                <td class="toComplete"></td>
-                                <td><input type="checkbox" /></td>
                                 <td class="toComplete"></td>
                             </tr>
                             <tr>
+                                <td></td>
                                 <td class="toComplete"></td>
-                                <td><input type="checkbox" /></td>
                                 <td class="toComplete"></td>
                             </tr>
                             <tr>
+                                <td></td>
                                 <td class="toComplete"></td>
-                                <td><input type="checkbox" /></td>
                                 <td class="toComplete"></td>
                             </tr>
                         </table>
@@ -181,9 +182,9 @@
                 <h3>Signature</h3>
                 <p>
                     J'atteste avoir pris connaissance des conditions générales d'inscription.<br>
-                    Mention "Lu et approuvé" <input type="text" class="inText" /><br>
+                    Mention "Lu et approuvé" <input type="text" class="inText" />
                 </p>
-                <p style="text-align: right">
+                <p style="text-align: right; margin-top: 1.5em">
                     Date <input type="text" class="inText inText--half" />
                     Signature <input type="text" class="inText inText--half" />
                 </p>
