Update fiche for 2015

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="header__title">
                 <h1>No Kachi Lyon</h1>
                 <h2>Fiche&nbsp;d'inscription</h2>
-                <h2>Saison&nbsp;2013/2014</h2>
+                <h2>Saison&nbsp;2014/2015</h2>
             </div>
             <div class="header__contact">
                 <div>http://nokachi-lyon.fr</div>
@@ -23,7 +23,7 @@
         <form>
             <div class="formIdentity">
                 <div class="formGroup">
-                    <h3>Fiche de l'adhérent</h3>
+                    <h3>Informations sportives</h3>
                     <div class="formItem formItem--photo">
                         <div class="photo"></div>
                     </div>
@@ -68,7 +68,7 @@
                 </div>
 
                 <div class="formGroup">
-                    <h3>Fiche du responsable</h3>
+                    <h3>Informations de contact</h3>
                     <div class="formItem">
                         <label>Prénom <i>(si différent de l'adhérent)</i></label>
                         <input type="text" />
